完善并发优化和实际案例文档